# rabbitmq-amqp

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  start.sh
src/: main.cpp
